--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+	<div class="preloader">
+		<div class="preloader__content">
+			<div class="preloader__first"></div>
+			<div class="preloader__second"></div>
+			<div class="preloader__third"></div>
+		</div>
+	</div>
+
 	<div class="header" id="header">
 		<div class="nav_top">
 			<div class="drawer_menu" id="drawer_menu">	
